[gd_scene load_steps=4 format=3 uid="uid://y304jg6volpg"]

[ext_resource type="Script" path="res://scenes/ui/quest_ui_poc.gd" id="1_3odui"]

[sub_resource type="LabelSettings" id="LabelSettings_wv57g"]
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_h7g60"]
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="Quest" type="Control"]
custom_minimum_size = Vector2(180, 60)
layout_mode = 3
anchors_preset = 0
offset_right = 180.0
offset_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_3odui")

[node name="QuestDetails" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1.0
offset_right = 171.0
offset_bottom = 60.0

[node name="QuestName" type="Label" parent="QuestDetails"]
layout_mode = 2
text = "Current Quest Name"
label_settings = SubResource("LabelSettings_wv57g")
text_overrun_behavior = 3

[node name="QuestDescription" type="Label" parent="QuestDetails"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
text = "Current Quest Descrpion"
label_settings = SubResource("LabelSettings_wv57g")
autowrap_mode = 2

[node name="QuestDescription2" type="Label" parent="QuestDetails"]
layout_mode = 2
text = "0/0"
label_settings = SubResource("LabelSettings_h7g60")
horizontal_alignment = 2
